kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-app
  namespace: app
  labels:
    app: vault-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: vault-app
